tests/sintax-semanth/should_fail/test10Wrong.tds
//This test should fail because the main method is missing
program
begin
	bool fun(integer w)
		begin
			integer a = 5;
			integer b = a + (7 + 15);
		end
end